OO-5859: check rights to move and remove categories in catalog